[gd_scene load_steps=5 format=3 uid="uid://j1plthunuobk"]

[ext_resource type="Script" uid="uid://b5f3dt0cqk252" path="res://Scripts/confirm.gd" id="1_02xmp"]
[ext_resource type="StyleBox" uid="uid://ykbqjul20drt" path="res://Assets/ui/styles/simple-basic.tres" id="2_yhmkg"]
[ext_resource type="StyleBox" uid="uid://douabvrad66ov" path="res://Assets/ui/styles/brown-pressed.tres" id="3_rsoxr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qndtx"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_02xmp")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -108.0
offset_right = 192.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="Message" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_yhmkg")
theme_override_styles/normal_mirrored = ExtResource("2_yhmkg")
theme_override_styles/pressed = ExtResource("3_rsoxr")
theme_override_styles/pressed_mirrored = ExtResource("3_rsoxr")
theme_override_styles/hover = ExtResource("2_yhmkg")
theme_override_styles/hover_mirrored = ExtResource("2_yhmkg")
theme_override_styles/hover_pressed = ExtResource("3_rsoxr")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_rsoxr")
theme_override_styles/disabled = ExtResource("2_yhmkg")
theme_override_styles/disabled_mirrored = ExtResource("2_yhmkg")
theme_override_styles/focus = SubResource("StyleBoxTexture_qndtx")
text = "Cancel"
icon_alignment = 1

[node name="Confirm" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("2_yhmkg")
theme_override_styles/normal_mirrored = ExtResource("2_yhmkg")
theme_override_styles/pressed = ExtResource("3_rsoxr")
theme_override_styles/pressed_mirrored = ExtResource("3_rsoxr")
theme_override_styles/hover = ExtResource("2_yhmkg")
theme_override_styles/hover_mirrored = ExtResource("2_yhmkg")
theme_override_styles/hover_pressed = ExtResource("3_rsoxr")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_rsoxr")
theme_override_styles/disabled = ExtResource("2_yhmkg")
theme_override_styles/disabled_mirrored = ExtResource("2_yhmkg")
theme_override_styles/focus = SubResource("StyleBoxTexture_qndtx")
text = "Confirm"
icon_alignment = 1

[node name="OK" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("2_yhmkg")
theme_override_styles/normal_mirrored = ExtResource("2_yhmkg")
theme_override_styles/pressed = ExtResource("3_rsoxr")
theme_override_styles/pressed_mirrored = ExtResource("3_rsoxr")
theme_override_styles/hover = ExtResource("2_yhmkg")
theme_override_styles/hover_mirrored = ExtResource("2_yhmkg")
theme_override_styles/hover_pressed = ExtResource("3_rsoxr")
theme_override_styles/hover_pressed_mirrored = ExtResource("3_rsoxr")
text = "OK"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/OK" to="." method="_on_ok_pressed"]
